; ModuleID = '/home/carl/AnghaBench/fastdfs/storage/extr_storage_func.c_storage_close_stat_file.c'
source_filename = "/home/carl/AnghaBench/fastdfs/storage/extr_storage_func.c_storage_close_stat_file.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@storage_stat_fd = common dso_local global i32 0, align 4
@errno = common dso_local global i64 0, align 8
@ENOENT = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @storage_close_stat_file to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @storage_close_stat_file() #0 {
  %1 = alloca i32, align 4
  store i32 0, i32* %1, align 4
  %2 = load i32, i32* @storage_stat_fd, align 4
  %3 = icmp sge i32 %2, 0
  br i1 %3, label %4, label %23

4:                                                ; preds = %0
  %5 = call i32 (...) @storage_write_to_stat_file()
  store i32 %5, i32* %1, align 4
  %6 = load i32, i32* @storage_stat_fd, align 4
  %7 = call i64 @close(i32 %6)
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %22

9:                                                ; preds = %4
  %10 = load i64, i64* @errno, align 8
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %14

12:                                               ; preds = %9
  %13 = load i64, i64* @errno, align 8
  br label %16

14:                                               ; preds = %9
  %15 = load i64, i64* @ENOENT, align 8
  br label %16

16:                                               ; preds = %14, %12
  %17 = phi i64 [ %13, %12 ], [ %15, %14 ]
  %18 = load i32, i32* %1, align 4
  %19 = sext i32 %18 to i64
  %20 = add nsw i64 %19, %17
  %21 = trunc i64 %20 to i32
  store i32 %21, i32* %1, align 4
  br label %22

22:                                               ; preds = %16, %4
  store i32 -1, i32* @storage_stat_fd, align 4
  br label %23

23:                                               ; preds = %22, %0
  %24 = load i32, i32* %1, align 4
  ret i32 %24
}

declare dso_local i32 @storage_write_to_stat_file(...) #1

declare dso_local i64 @close(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
